--- a/index.html
+++ b/index.html
@@ -1360,10 +1360,40 @@
                         <!-- POSITIONS -->
                         <section data-bind="sections" id="positions" class="dated_story">
                             <header>
-                                <h3 class="header-text empty" data-bind="label"><span class="undefined needsclick"
-                                        contenteditable="false" data-placeholder="Work experience">Experience</span>
+                                <h3 class="header-text empty" data-bind="label">
+                                    <span class="undefined needsclick" contenteditable="false" data-placeholder="Work experience">Experience</span>
                                 </h3>
                             </header>
+
+                            <!-- CORNERSHOP -->
+                            <article data-bind="contents" class="">
+                                <div class="article-headings">
+                                    <h6 class="date-range">
+                                        <span data-bind="start_date">
+                                            <span class="undefined needsclick" contenteditable="false" data-placeholder="YYYY">2021</span>
+                                        </span>
+                                        <span data-bind="end_date">
+                                            <span class="undefined needsclick" contenteditable="false" data-placeholder="YYYY">Present</span>
+                                        </span>
+                                    </h6>
+                                </div>
+                                <div class="article-body">
+                                    <h4 data-bind="title"><span class="undefined needsclick" contenteditable="false" data-placeholder="Job title">Senior iOS developer</span></h4>
+                                    <a data-bind="organization_url" target="_blank" rel="nofollow" href="https://www.cornershopapp.com/">
+                                        <h5 data-bind="organization"><span class="undefined needsclick" contenteditable="false" data-placeholder="Organization">Cornershop By Uber</span></h5>
+                                    </a>
+                                    <div id="react-tinymce-186" class="mce-content-body" spellcheck="true"
+                                        placeholder="Description">
+                                        <p><span>Working in:</span></p>
+                                        <ul>
+                                            <li>Requirement analysis</li>
+                                            <li>Swift</li>
+                                            <li>iOS Tech support for other team devs</li>
+                                            <li>Unit Testing</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </article>
 
                             <!-- ROBINFOOD -->
                             <article data-bind="contents" class="">
@@ -1378,7 +1408,7 @@
                                     </h6>
                                 </div>
                                 <div class="article-body">
-                                    <h4 data-bind="title"><span class="undefined needsclick" contenteditable="false" data-placeholder="Job title">Senior iOS developer</span></h4>
+                                    <h4 data-bind="title"><span class="undefined needsclick" contenteditable="false" data-placeholder="Job title">iOS Squad lead</span></h4>
                                     <a data-bind="organization_url" target="_blank" rel="nofollow" href="https://www.robinfood.com/">
                                         <h5 data-bind="organization"><span class="undefined needsclick" contenteditable="false" data-placeholder="Organization">RobinFood</span></h5>
                                     </a>
@@ -1648,7 +1678,7 @@
         </div>
     </div>
 
-    <footer class="vcv-footer">2020</footer>
+    <footer class="vcv-footer">2021</footer>
 
     <link rel="stylesheet" type="text/css" href="./Jirson Tavera - Software Engineering Professional - VisualCV_files/magnific-popup.min.css">
     <script src="./Jirson Tavera - Software Engineering Professional - VisualCV_files/jquery.min.js"></script>
